AllAccountBalance column overflow fix

--- a/frontend/src/app/allaccountbalances/allaccountbalances.component.css
+++ b/frontend/src/app/allaccountbalances/allaccountbalances.component.css
@@ -3,6 +3,7 @@
     border-collapse: collapse;
     width: 100%;
     font-size: 14px;
+    overflow: hidden;
   }
   
   td, th {
